# cc-infrastructure

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: calculate.cpp.576FC870C7AC1AA0.idx  calculate.h.3C6B64AA70BB4363.idx  main.cpp.64DD98F3680F6873.idx
cm/: CMakeLists.txt
cm/include/cm/util/: JsonUtil.h
cm/src/util/: JsonUtil.cpp
core/: CMakeLists.txt
core/src/: main.cpp
engine/: CMakeLists.txt
engine/include/engine/: calculate.h
engine/src/: calculate.cpp
